--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Graduation project</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-menu">
+            <img class="logo-header" src="img/logo.svg" alt="logo">
+            <ul class="nav-header">
+                <li><a class="link-menu" href="#">Мероприятия</a></li>
+                <li><a class="link-menu" href="#">Расписание</a></li>
+                <li><a class="link-menu" href="#">О компании</a></li>
+            </ul>
+        </div>
+        <ul class="header-social">
+            <li><a href="#"><img class="img-social" src="img/icons/IN.svg" alt="Instagram"></a></li>
+            <li><a href="#"><img class="img-social" src="img/icons/FB.svg" alt="Facebook"></a></li>
+        </ul>
+    </header>
 </body>
 </html>
