add section home

--- a/index.html
+++ b/index.html
@@ -22,5 +22,20 @@
             <li><a href="#"><img class="img-social" src="img/icons/FB.svg" alt="Facebook"></a></li>
         </ul>
     </header>
+    <div class="wrapper">
+        <section class="home">
+            <h1 class="home-h1">онлайн тренировки любой сложности</h1>
+            <div class="home-title">
+                <div class="home-title-number">> 15</div>
+                <div class="home-title-description">
+                    <div class="home-title-description-1">тренировок</div>
+                    <div class="home-title-description-2">в области спортивной физиологии и нутрициологии</div>
+                    <a class="btn-more" href="#">Узнать подробнее</a>
+                    <img src="img/icons/Arrow.svg" alt="">
+                </div>
+            </div>
+            <img class="photo-woman" src="img/files/@1x/Image 1 screen.png" alt="Photo Woman">
+        </section>
+    </div>
 </body>
 </html>
