--- a/index.html
+++ b/index.html
@@ -36,6 +36,127 @@
             </div>
             <img class="photo-woman" src="img/files/@1x/Image 1 screen.png" alt="Photo Woman">
         </section>
+        <section class="events">
+            <h2>Ближайшие события</h2>
+            <div class="event-item">
+                <div class="event-item-1">
+                    <p class="date">29.06 - 4.07</p>
+                    <h3>Марафон выносливости</h3>
+                    <div class="label">марафон</div>
+                </div>
+                <div class="event-item-2">
+                    <p class="date">9.07</p>
+                    <h3>Как стать<br>тренером?</h3>
+                    <div class="label">вебинар</div>
+                </div>
+                <div class="event-item-3">
+                    <p class="date">15.07</p>
+                    <h3>Йога, как стиль жизни</h3>
+                    <div class="label">вебинар</div>
+                </div>
+            </div>
+        </section>
+        <section class="schedule">
+            <div class="title">
+                <h2>Расписание<br> тренировок</h2>
+                <p>22 - 28 июня</p>
+            </div>
+            <div class="box">
+                <div class="box-item item-1">
+                    <p class="box-time">22 июня, 10:00</p>
+                    <img class="box-img" src="img/icons/body.svg" alt="body">
+                    <p class="box-description">Функциональный тренинг</p>
+                </div>
+                <div class="box-item item-2">
+                    <p class="box-time">24 июня, 10:00</p>
+                    <img class="box-img" src="img/icons/bottle.svg" alt="bottle">
+                    <p class="box-description">Body sculpt</p>
+                </div>
+                <div class="box-item item-3">
+                    <p class="box-time">26 июня, 11:00</p>
+                    <img class="box-img" src="img/icons/dumbbell.svg" alt="dumbbell">
+                    <p class="box-description">L.A.B.</p>
+                </div>
+                <div class="box-item item-4">
+                    <p class="box-time">23 июня, 10:00</p>
+                    <img class="box-img" src="img/icons/jump.svg" alt="jump">
+                    <p class="box-description">Силовой микс</p>
+                    <p class="box-text">Упражнения помогут создать красивый рельеф и прийти<br>в спортивную форму.</p>
+                </div>
+                <div class="box-item item-5">
+                    <p class="box-time">25 июня, 11:00</p>
+                    <img class="box-img" src="img/icons/heart.svg" alt="heart">
+                    <p class="box-description">Дыхательные практики</p>
+                </div>
+                <div class="box-item item-6">
+                    <p class="box-time">27 июня, 10:00</p>
+                    <img class="box-img" src="img/icons/weight.svg" alt="weight">
+                    <p class="box-description">Комплексная разминка</p>
+                </div>
+            </div>
+        </section>
     </div>
+    <div class="mailing">
+        <div class="mailing-box">
+            <h2 class="mail-h2">Подпишитесь на рассылку</h2>
+            <div class="flex">
+                <input class="input" type="text" placeholder="Ваш e-mail">
+                <a class="btn-more" href="#">Подписаться</a>
+            </div>
+            <div class="check-box">
+                <img src="img/icons/check_box.svg" alt="check_box">
+                <p>Согласен с обработкой персональных данных </p>
+            </div>
+        </div>
+    </div>
+    <section class="about">
+        <div class="about-flex">
+            <div>
+                <h2>О компании</h2>
+                <p>Наша компания является одной из немногих, кто предлагает фитнес услуги онлайн! Оставайтесь с нами и вы сами увидите, что мы проводим не только онлайн-тренировки.</p>
+                <a class="btn-more" href="#">Записаться</a>
+            </div>
+            <img src="img/files/@1x/trainer.png" alt="trainer">
+        </div>
+        <div class="about-flex-item">
+            <div class="about-item">
+                <h3>Экономия времени</h3>
+                <p>Не нужно тратить время на дорогу</p>
+            </div>
+            <div class="about-item">
+                <h3>Индивидуальный подход</h3>
+                <p>Внимание тренера пренадлежит только вам</p>
+            </div>
+            <div class="about-item">
+                <h3>Индивидуальный подход</h3>
+                <p>Средняя цена одной тренировки - 700₽</p>
+            </div>
+            <div class="about-item">
+                <h3>Опытный персонал</h3>
+                <p>Стаж работы у наших тренеров от 5 лет</p>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="header-menu">
+                <img class="logo-header" src="img/logo.svg" alt="logo">
+                <ul class="nav-header">
+                    <li><a class="link-menu" href="#">Мероприятия</a></li>
+                    <li><a class="link-menu" href="#">Расписание</a></li>
+                    <li><a class="link-menu" href="#">О компании</a></li>
+                </ul>
+            </div>
+            <a href="mailto:info@freefit.com">info@freefit.com</a>
+            <ul class="header-social">
+                <li><a href="#"><img class="img-social" src="img/icons/IN.svg" alt="Instagram"></a></li>
+                <li><a href="#"><img class="img-social" src="img/icons/FB.svg" alt="Facebook"></a></li>
+            </ul>
+        </div> 
+        <div class="footer-bottom">
+            <p>&copy;2021, Все права защищены</p>
+            <p>Сделано в рамках курса учебной платформы <a class="footer-link" href="#">Frontend Blok</a></p>
+        </div>
+    </footer>
 </body>
 </html>
